AUTOMAKE_OPTIONS = foreign

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = 	src \
		test \
		man \
		utils \
		examples \
		pcapfiles \
		src/ipset \
		src/regex \
		src/user \
		src/learner \
		src/names \
		src/flow \
		src/protocols/ethernet \
		src/protocols/vlan \
		src/protocols/mpls \
		src/protocols/ip \
		src/protocols/ip6 \
		src/protocols/gprs \
		src/protocols/vxlan \
		src/protocols/openflow \
		src/protocols/gre \
		src/protocols/icmp \
		src/protocols/icmp6 \
		src/protocols/udp \
		src/protocols/tcp \
		src/protocols/http \
		src/protocols/ssl \
		src/protocols/smtp \
		src/protocols/pop \
		src/protocols/imap \
		src/protocols/modbus \
		src/protocols/bitcoin \
		src/protocols/dns \
		src/protocols/sip \
		src/protocols/dhcp \
		src/protocols/ntp \
		src/protocols/snmp \
		src/protocols/ssdp \
		src/protocols/coap \
		src/protocols/rtp \
		src/protocols/tcpgeneric \
		src/protocols/udpgeneric \
		src/protocols/frequency 

dist_noinst_SCRIPTS = autogen.sh

EXTRA_DIST = README AUTHORS NEWS INSTALL README.md

MAINTAINERCLEANFILES = config.h.in Makefile.in configure stamp-h1 config.log py-compile \
        ltmain.sh missing install-sh depcomp config.sub config.guess aclocal.m4 config.h.in~

