AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = 	bitcoinminer.py \
		malware.py \
		mostusedips.py \
		nids_firewall.py \
		troyan.py \
		redis_adaptor.py \
		cassandra_adaptor.py \
		hadoop_adaptor.py \
		heartbeat.py \
		unknown.py \
		tor.py \
		netfilter.py \
		parallel.py \
		snort.py \
		query.py \
		uri_exploit.py \
		zeus_malware.py \
		ddos.py

MAINTAINERCLEANFILES = Makefile.in 
